--- a/accounts.yml
+++ b/accounts.yml
@@ -2,7 +2,7 @@ build:
   version: "3.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related DOCKER APIs "
+  message: "Welcome to EazyBank accounts related from DOCKER APIs "
   contactDetails:
     name: "John Doe - Developer"
     email: "john@eazybank.com"
