--- a/accounts.yml
+++ b/accounts.yml
@@ -2,10 +2,10 @@ build:
   version: "3.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related docker APIs "
+  message: "Welcome to NstBank accounts related docker APIs "
   contactDetails:
     name: "John Doe - Developer"
-    email: "john@eazybank.com"
+    email: "john@NstBank.com"
   onCallSupport:
     - (555) 555-1234
     - (555) 523-1345
