--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -2,10 +2,10 @@ build:
   version: "1.0"
 
 cards:
-  message: "Hey, welcome to EazyBank cards related prod APIs"
+  message: "Hey, welcome to NstBank cards related prod APIs"
   contactDetails:
     name: "Sandra Harald - Product Owner"
-    email: "sandra@eazybank.com"
+    email: "sandra@NstBank.com"
   onCallSupport:
     - (617) 432-2356
     - (936) 564-8721
