--- a/cards-qa.yml
+++ b/cards-qa.yml
@@ -2,10 +2,10 @@ build:
   version: "2.0"
 
 cards:
-  message: "Welcome to EazyBank cards related QA APIs "
+  message: "Welcome to NstBank cards related QA APIs "
   contactDetails:
     name: "Cherryl Pankaj - QA Lead"
-    email: "cherryl@eazybank.com"
+    email: "cherryl@NstBank.com"
   onCallSupport:
     - (310) 875-4367
     - (201) 236-1267
