--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,10 +2,10 @@ build:
   version: "1.0"
 
 loans:
-  message: "Hey, welcome to EazyBank loans related prod APIs "
+  message: "Hey, welcome to NstBank loans related prod APIs "
   contactDetails:
     name: "Pelias Sudhir - Product Owner"
-    email: "pelias@eazybank.com"
+    email: "pelias@NstBank.com"
   onCallSupport:
     - (723) 656-8709
     - (156) 342-0956
