--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -1,6 +1,12 @@
 server:
   port: 8070
 
+spring:
+  application:
+    name: "eurekaserver"
+  config:
+    import: "optional:configserver:http://localhost:8071/"  
+
 eureka:
   instance:
     hostname: localhost
